default-install all tenants with consortium mocks; consolidate reference-data-seeded test classes
Follow-up cleanup after the org.folio.rest.impl -> org.folio.it /
org.folio.rest.support -> org.folio.support package move:

- BaseIntegrationTest now installs and truncates TENANT_ID,
  CONSORTIUM_CENTRAL_TENANT, and CONSORTIUM_MEMBER_TENANT by default
  for every *IT class, mocking the default tenant as a non-consortium
  member (unchanged) and both consortium tenants as consortium members
  (new default). Removed the @EnableTenant/@Tenants/EnableTenantExtension
  mechanism entirely - no class needs a custom tenant subset anymore.
- Fixed checkstyle violations left over from the package move across
  several *IT classes: import ordering shifted by the org.folio.support
  rename, and VertxTestUtil.await(...) call sites converted to a static
  import where that didn't collide with an existing Awaitility.await
  import in the same file.
- InstanceDateTypesIT: no longer extends the generic
  BaseReferenceDataIntegrationTest (its empty-collection assumption and
  whole-table @AfterEach wipe both conflict with instance_date_type
  being a MIGRATION_SEEDED_TABLES entry), merged with the now-deleted
  InstanceDateTypesEcsIT, and rewritten in synchronous style. Tests now
  exercise real seeded rows directly (restoring whatever they mutate)
  instead of creating throwaway records, which would need a unique
  single-character code - the schema caps it at maxLength 1 - to avoid
  colliding with a seeded row or another test in the class.
- SubjectSourceIT/SubjectTypeIT: merged with the now-deleted
  SubjectSourcesIT/SubjectTypesIT (which extended the same generic
  base with the same empty-collection/whole-table-wipe problem, since
  subject_source and subject_type are also MIGRATION_SEEDED_TABLES).
  Added CRUD coverage equivalent to what the generic base provided,
  adapted to use uniquely-named/coded records instead of assuming the
  table starts empty.

Co-Authored-By: Claude 